# cpskdb

./: .env.ci  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.ai/docs/: PRD.md  context.md  tasks.md  tests.md
.claude/: settings.json.bak
.claude/agents/: context.md  test-scenario-creator.md  tools-codebase-analyzer.md  writetests.md
.claude/commands/: tdd-workflow.md
.claude/hooks/: README_SIMPLIFIED.md  post_tool_use_commit_only.py  post_tool_use_python_check.py  post_tool_use_python_check_new.py  post_tool_use_python_check_old.py  pre_tool_use_protect_configs.py  pre_tool_use_protect_precommit.py
.claude/hooks/python_check/: README.md  __init__.py  config.py  file_extractor.py  git_utils.py  main.py  markdown_checker.py  python_checker.py  size_validator.py  utils.py
.serena/: project.yml
.serena/memories/: code_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: docker-compose-configuration.md
scripts/: check_codebase_language.py  filter_language_issues.py  forbid_noqa.py  languagetool_personal_dict.txt  setup_languagetool.sh  test_languagetool.py
src/: requirements_generator.py
src/config/: __init__.py  pyproject_manager.py
tests/: TEST_IMPLEMENTATION_SUMMARY.md  run_tests.py  test_docker_compose_advanced_edge_cases.py  test_docker_compose_api_endpoints.py  test_docker_compose_base.py  test_docker_compose_basic.py  test_docker_compose_boundary_conditions.py  test_docker_compose_ci_restart_policy.py  test_docker_compose_config_edge_cases.py  test_docker_compose_dev_workflow.py  test_docker_compose_edge_cases.py  test_docker_compose_edge_cases_extended.py  test_docker_compose_environment_validation.py  test_docker_compose_error_messages.py  test_docker_compose_errors.py  test_docker_compose_extended_base.py  test_docker_compose_extended_containers.py  test_docker_compose_extended_features.py  test_docker_compose_extended_network.py  test_docker_compose_graceful_shutdown.py  test_docker_compose_integration.py  test_docker_compose_missing_scenarios.py  test_docker_compose_network_advanced.py  test_docker_compose_network_isolation.py  test_docker_compose_network_performance.py  test_docker_compose_network_service_discovery.py  test_docker_compose_performance.py  test_docker_compose_performance_benchmarks.py  test_docker_compose_qdrant.py  test_docker_compose_restart_policy.py  test_docker_compose_snapshots.py  test_docker_compose_startup_order.py  test_docker_compose_state_persistence.py  test_docker_compose_state_transitions.py  test_docker_compose_volume_permissions.py  test_precommit_setup.py  test_readme.py
tests/test_scripts/: service_discovery_test.sh
tests/unit/: test_pyproject_config.py  test_pyproject_dev_dependencies.py  test_requirements_generation.py  test_tool_configuration.py
